fixed gap

--- a/src/styles/main-container.scss
+++ b/src/styles/main-container.scss
@@ -1,6 +1,6 @@
 .main {
   display: grid;
-  grid-gap: 50px 48px;
+  gap: 50px 48px;
   grid-template-columns: repeat(auto-fit, 200px);
   justify-content: center;
 
